force-app/main/default/objects/Payment_Plan_Approval_Line__c/Payment_Plan_Approval_Line__c.object-meta.xml
<CustomObject>
    <label>Payment Plan Approval Line</label>
    <nameField>
        <displayFormat>PPL-{0000}</displayFormat>
        <label>Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Plan Approval Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>