force-app/main/default/objects/Payment_Plan_Approval_Line__c/fields/Approval_Request__c.field-meta.xml
<CustomField>
    <fullName>Approval_Request__c</fullName>
    <label>Approval Request</label>
    <referenceTo>Approval_Request__c</referenceTo>
    <relationshipLabel>Payment Plan Approval Lines</relationshipLabel>
    <relationshipName>Payment_Plan_Approval_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>