force-app/main/default/objects/Payment_Plan_Approval_Line__c/fields/Cash_Flow_Sum__c.field-meta.xml
<CustomField>
    <fullName>Cash_Flow_Sum__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cash Flow Sum</label>
    <referenceTo>Cash_Flow_Sum__c</referenceTo>
    <relationshipLabel>Payment Plan Approval Lines</relationshipLabel>
    <relationshipName>Payment_Plan_Approval_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>