force-app/main/default/objects/Payment_Plan_Approval_Line__c/fields/Constant__c.field-meta.xml
<CustomField>
    <fullName>Constant__c</fullName>
    <label>Constant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>